--- a/public/body.css
+++ b/public/body.css
@@ -65,9 +65,23 @@ section h1 {
 
 section p {
     margin-left: 105px;
-    color: red;
+    color: white;
 }
 
+
+.fadein{
+    width: 50%;
+      font-family: "Changa One", sans-serif;
+  font-weight: 400;
+  color: #eee;
+  font-style: normal;
+}
+.fadein span{
+    color: #ff0000;
+    font-family: "Rubik Wet Paint", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
 .spicards {
     display: flex;
     position: relative;
@@ -121,7 +135,6 @@ section p {
 }
 
 .img4 {
-    /* width: 100px; */
     position: relative;
     margin-top: -50px;
     margin-left: -60px;
@@ -129,7 +142,6 @@ section p {
     transform: scale(1);
     cursor: pointer;
     object-fit: cover;
-
     z-index: 1;
 }
 
@@ -241,6 +253,7 @@ img:hover {
     width: 50%;
       font-family: "Changa One", sans-serif;
   font-weight: 400;
+  color: #eee;
   font-style: normal;
 }
 
